# sgl-port-py32f0

./: CMakeLists.txt  README.md  build.bat  build.sh  flash.bat
.github/workflows/: ubuntu.yml
cmake/: config.h.in  sgl_config.h.in  toolchain-windows.cmake
drivers/Misc/: Devices.xml
drivers/PY32F0xx_HAL_Driver/Inc/: py32f0xx_hal_flash_ex.h  py32f0xx_hal_tim.h  py32f0xx_hal_uart.h
drivers/PY32F0xx_HAL_Driver/Src/: py32f0xx_hal_flash.c  py32f0xx_hal_uart.c  py32f0xx_ll_utils.c
examples/demo/: README.md  main.c
include/: py32f0xx_hal_conf.h  py32f0xx_it.h
ldscripts/: py32f003x6.ld  py32f003x8.ld  py32f030x6.ld  py32f030x8.ld
src/: py32f0xx_it.c
